K8S/user-pgsql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-pgsql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-postgres
  template:
    metadata:
      labels:
        app: user-postgres
    spec:
      containers:
        - name: user-postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pgsqldb
      volumes:
        - name: pgsqldb
          persistentVolumeClaim:
            claimName: user-pgsql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: pgsql-user-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: user-postgres
  ports:
    - name: user-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: user-postgres-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: user-postgres
  ports:
    - protocol: TCP
      port: 5434
      targetPort: 5432
